优惠券移动端第二次提交
优惠券移动端第二次提交

--- a/优惠券移动端设置页面/css/setting.less
+++ b/优惠券移动端设置页面/css/setting.less
@@ -6,6 +6,8 @@
 @spanColor:#888888;
 @boderColoe2:#e8e8e8;
 @anniuColor:#3baca7;
+@boxshowColor:rgba(225, 225, 219, 0.5);
+@fontFamily:'华文细黑';
 
 .heade(){
     width: 100%;
