--- a/优惠券移动端设置页面/css/juanye.css
+++ b/优惠券移动端设置页面/css/juanye.css
@@ -1,7 +1,3 @@
-body {
-  background: #f5f5f5;
-  margin: 0;
-}
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -550,6 +546,10 @@ img {
   width: 100%;
   vertical-align: middle;
 }
+body {
+  background: #f5f5f5;
+  margin: 0;
+}
 @media screen and (width: 320px) {
   html {
     font-size: 16px;
@@ -569,6 +569,10 @@ img {
   html {
     font-size: 20.7px;
   }
+}
+body {
+  background: #f5f5f5;
+  margin: 0;
 }
 header {
   width: 100%;
@@ -596,167 +600,227 @@ header i {
   background: url('../image/back.png') no-repeat;
   background-size: 0.625rem 1rem;
 }
-header h2 {
-  display: inline-block;
-}
-header h3 {
-  float: right;
-  font-weight: normal;
-  font-size: 0.9375rem;
-  margin-right: 1.875rem;
+public,
+main,
+main .qcyh .qcyh-1,
+main #guangjia .qcyh-2 {
+  width: 100%;
+  box-sizing: border-box;
 }
 main {
+  padding: 0.78125rem;
+  font-family: '华文细黑';
+}
+main .qcyh {
   width: 100%;
-  padding: 1.25rem 0;
-  box-sizing: border-box;
 }
-main ul {
-  width: 100%;
-  border-top: 1px solid #e8e8e8;
+main .qcyh .qcyh-1 {
+  padding-top: 0.78125rem;
+  overflow: hidden;
 }
-main ul li {
-  height: 3.28125rem;
-  width: 100%;
-  border-bottom: 1px solid #e8e8e8;
-  background: #fff;
-  line-height: 3.28125rem;
-  padding: 0 0.78125rem;
-  box-sizing: border-box;
-}
-.szje {
-  color: #e8e8e8;
-}
-.szje input {
-  display: inline-block;
-  width: 3.125rem;
-  height: 1.09375rem;
-  text-align: center;
-  border: 0;
-}
-.szje .szje-1 {
+main .qcyh .qcyh-1 h3 {
   float: left;
-  width: 50%;
-  position: relative;
-  border-right: 1px solid #e8e8e8;
-  box-sizing: border-box;
-}
-.szje .szje-1 span:nth-child(2) {
-  position: absolute;
-  top: 1rem;
-  left: 0;
-  font-size: 0.4375rem;
-}
-.szje .szje-2 {
-  float: right;
-  padding: 0 0.78125rem;
-  box-sizing: border-box;
-  margin-right: 0.5rem;
-}
-ul li:nth-child(3) {
-  color: #e8e8e8;
-}
-ul li:nth-child(3) .date {
-  float: right;
-}
-ul li:nth-child(3) .date input {
-  width: 5.625rem;
-  height: 1.09375rem;
-  font-size: 0.15625rem;
-  border: 0;
-  padding-right: -10px;
-}
-ul li:nth-child(4) .time1 {
-  float: left;
-  position: relative;
-}
-ul li:nth-child(4) .time1 span {
-  font-size: 0.375rem;
-  position: absolute;
-  top: 1rem;
-  left: 0;
-  color: #e8e8e8;
-  width: 6.25rem;
-}
-ul li:nth-child(4) .time2 {
-  float: right;
-  margin-right: 1.9375rem;
-}
-ul li:nth-child(5) {
-  position: relative;
-}
-ul li:nth-child(5) .slideThree {
-  width: 4.375rem;
-  height: 1.71875rem;
-  border: 1px solid #dedede;
-  margin: 0.78125rem auto;
-  position: relative;
-  -moz-border-radius: 50px;
-  -webkit-border-radius: 50px;
-  border-radius: 0.15625rem;
-}
-ul li:nth-child(5) .slideThree:after {
-  content: 'OFF';
   color: #000;
-  position: absolute;
-  right: 10px;
-  z-index: 0;
-  font-size: 0.75rem;
-  line-height: 1.96875rem;
-  font-family: Arial, sans-serif;
-  font-weight: bold;
-  text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.15);
+  font-weight: normal;
 }
-ul li:nth-child(5) .slideThree:before {
-  content: 'ON';
-  color: #00bf00;
-  position: absolute;
-  left: 10px;
-  z-index: 0;
-  font-size: 0.75rem;
-  line-height: 1.96875rem;
-  font-family: Arial, sans-serif;
-  font-weight: bold;
+main .qcyh .qcyh-1 span {
+  float: right;
+  color: #888888;
 }
-ul li:nth-child(5) .slideThree label {
-  display: block;
-  width: 1.875rem;
-  height: 1.25rem;
-  cursor: pointer;
-  position: absolute;
-  top: 0.25rem;
-  left: 3px;
-  z-index: 1;
-  background: #3baca7;
-  -moz-border-radius: 0.15625rem;
-  -webkit-border-radius: 0.15625rem;
-  border-radius: 0.15625rem;
-  -moz-transition: all 0.4s ease;
-  -o-transition: all 0.4s ease;
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-}
-ul li:nth-child(5) .slideThree input[type=checkbox] {
-  visibility: hidden;
-}
-ul li:nth-child(5) .slideThree input[type=checkbox]:checked + label {
-  left: 2.25rem;
-}
-ul li:nth-child(5) .slideThree {
-  position: absolute;
-  top: 0;
-  right: 0.75rem;
-}
-.ind {
+main .qcyh .qcyh-2 {
   width: 100%;
+  height: 10.9375rem;
+  background: #fff;
+  margin-top: 0.78125rem;
+  border-radius: 0.3125rem;
+  box-shadow: 0px 1px 15px 1px rgba(225, 225, 219, 0.5);
+}
+main .qcyh .qcyh-2 .qcyh-2-ys {
+  width: 100%;
+  height: 70%;
+  background: url('../image/yhjpj.png') no-repeat;
+  background-position: top center;
+  background-size: contain;
+}
+main .qcyh-2-ys {
   padding: 0.78125rem;
   box-sizing: border-box;
-}
-input[type='submit'] {
-  display: inline-block;
-  width: 100%;
-  height: 3.125rem;
-  border: 0;
-  border-radius: 15px;
-  background-color: #ff9b25;
   color: #fff;
+  position: relative;
+}
+main .qcyh-2-ys .ys-left {
+  height: 80%;
+}
+main .qcyh-2-ys .ys-left h2 {
+  font-size: 1.5625rem;
+  font-weight: 300;
+}
+main .qcyh-2-ys .ys-left span {
+  display: block;
+  font-size: 0.8125rem;
+  font-weight: normal;
+}
+main .qcyh-2-ys .ys-left .span1 {
+  opacity: 0.5;
+  letter-spacing: 1px;
+  margin-top: 0.3125rem;
+}
+main .qcyh-2-ys .ys-left .span2 {
+  position: absolute;
+  bottom: 1.25rem;
+  left: 0.90625rem;
+  padding-left: 1.09375rem;
+  background: url('../image/nz.png') no-repeat;
+  background-position: left;
+  background-size: contain;
+  letter-spacing: -1px;
+}
+main .qcyh-2-ys .ys-right img {
+  position: absolute;
+  top: -0.5625rem;
+  right: -0.25rem;
+  width: 4.875rem;
+  height: 4.875rem;
+}
+main .qcyh-2-ys .ys-right span {
+  position: absolute;
+  bottom: 1.09375rem;
+  font-size: 0.6875rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  right: 0.78125rem;
+  display: block;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 0.21875rem;
+  border-radius: 0.25rem;
+  color: rgba(255, 255, 255, 0.7);
+}
+main .qcyh-3-db {
+  padding: 0 0.78125rem 0.78125rem 0.78125rem;
+  box-sizing: border-box;
+  height: 30%;
+  display: flex;
+}
+main .qcyh-3-db a {
+  text-align: center;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .qcyh-3-db a span {
+  display: inline-block;
+  padding-left: 40px;
+  color: #888888;
+  font-family: '华文细黑';
+}
+main .qcyh-3-db a:nth-child(1) {
+  border-right: 1px solid #ccc;
+  box-sizing: border-box;
+}
+main .qcyh-3-db a:nth-child(1) span {
+  background: url('../image/xie.png') no-repeat;
+  background-size: contain;
+  background-position: left;
+}
+main .qcyh-3-db a:nth-child(2) span {
+  background: url('../image/fenxiang.png') no-repeat;
+  background-size: contain;
+  background-position: left;
+}
+main #yhj-zi-1 {
+  height: 6.96875rem;
+  border-radius: 0.3125rem;
+}
+main #yhj-zi-1 .qcyh-2-ys {
+  background: url('../image/zise.png') no-repeat;
+  background-size: contain;
+  height: 100%;
+}
+main #yhj-zi-1 h2 {
+  font-size: 1rem;
+}
+main #yhj-zi-1 h2 span {
+  display: inline-block;
+}
+main #yhj-zi-1 h2 span:nth-child(1) {
+  font-size: 2.1875rem;
+}
+main #yhj-zi-1 h2 span:nth-child(2) {
+  opacity: 0.7;
+}
+main #yhj-zi-1 .span1 {
+  margin-top: 1rem;
+  opacity: 1;
+  letter-spacing: -0.3px;
+}
+main #yhj-zi-1 .span2 {
+  bottom: 0.46875rem;
+}
+main #yhj-zi-1 .ys-right span {
+  bottom: 0.6875rem;
+}
+main #man20 {
+  background-image: url('../image/zise2.png');
+}
+main #man20 h2 {
+  font-size: 1rem;
+}
+main #man20 h2 span {
+  display: inline-block;
+}
+main #man20 h2 span:nth-child(1) {
+  font-size: 2.1875rem;
+}
+main #man20 h2 span:nth-child(2) {
+  opacity: 0.7;
+}
+main #man20 .span1 {
+  margin-top: 1rem;
+  opacity: 1;
+  letter-spacing: -0.3px;
+}
+main #man20 .span2 {
+  bottom: 1.09375rem;
+}
+main #lanmu a:nth-child(1) span {
+  background-image: url('../image/zuofei.png');
+  padding-left: 1.25rem;
+}
+main #lanmu a:nth-child(2) {
+  border-right: 1px solid #ccc;
+  box-sizing: border-box;
+}
+main #lanmu a:nth-child(2) span {
+  background-image: url('../image/yulan.png');
+}
+main #lanmu a:nth-child(3) span {
+  padding-left: 1.25rem;
+  background-image: url('../image/fenxiang2.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+main #guangjia {
+  width: 100%;
+}
+main #guangjia .qcyh-2 {
+  height: 7rem;
+  margin-top: 0.78125rem;
+  border: 3px dashed #dedede;
+  background: #fff url('../image/add.png') no-repeat;
+  background-position: center 0.84375rem;
+  background-size: 3.5rem;
+  text-align: center;
+}
+main #guangjia .qcyh-2 span {
+  display: inline-block;
+  color: #888888;
+  font-size: 0.8125rem;
+  margin-top: 5.15625rem;
+}
+main .ts {
+  margin-top: 3.75rem;
+  font-size: 0.75rem;
+  color: #999;
+  line-height: 1.25rem;
 }
