--- a/优惠券移动端设置页面/css/qcyh.less
+++ b/优惠券移动端设置页面/css/qcyh.less
@@ -69,7 +69,7 @@ main{
     }
     .szje-1{
         float: left;
-        width: 55%;
+        width: 50%;
         position: relative;
         border-right: 1px solid @boderColoe2;
         box-sizing: border-box;
@@ -82,9 +82,10 @@ main{
     }
     .szje-2{
         float: right;
-        width: 45%;
+        // width: 45%;
         padding: 0 (25rem/32);
         box-sizing: border-box;
+        margin-right: (16rem/32);
     }
 }
 
@@ -117,6 +118,7 @@ ul li:nth-child(4){
     }
     .time2{
         float: right;
+        margin-right: (62rem/32);
     }
 }
 
